--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Chocolate pizza</title>
 </head>
@@ -18,7 +16,7 @@
         <div class="logo-container">
             <img class="logo__img" src="img/logo.png" alt="logo img">
             <div class="logo__text-container">
-                <h1 class="logo__heading">Delicious</h1>
+                <h1 class="logo__heading">DElicious</h1>
                 <p class="logo__text">The best food blog on the web</p>
             </div>
         </div>
@@ -146,7 +144,7 @@
     <footer>
         <img src="img/small-logo.png" alt="logo img">
         <p class="copy-right">
-            Delicious 2013 &copy; - All rights reserved.<br> Proudly Published with ghost.
+            Delicious &copy; 2013 - All rights reserved.<br> Proudly Published with ghost.
         </p>
     </footer>
 </body>
