--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="input-group">
                     <input type="checkbox" name="" id="">
-                    <p class="checkbox-text">1 cup honey roasted pecane, roughly chopped</p>
+                    <p class="checkbox-text checkbox-text--line-break">1 cup honey roasted pecane, roughly chopped</p>
                 </div>
             </div>
         </div>
